adjusted flexbox values, fixing alignment

--- a/style.css
+++ b/style.css
@@ -35,14 +35,29 @@
 
 /* ! classes */
 
-.hidden {
-    display: none;
-}
-
+/* ?main container */
 .container {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    padding: 10px;
     margin-top: 20px;
     text-align: center; 
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+/* ?hidden container */
+.hidden {
+    display: none;
+}
+
+
+.flex1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+   margin-top: 10px;
+   padding: 10px;
 }
